--- a/index.html
+++ b/index.html
@@ -24,31 +24,32 @@
        </div>
 
 
-      <div>
+      
 <br>
-       <p class=" text-center font-weight-bold check">CONTACT</p>
+       <p class=" text-center font-weight-bold " style="margin-top: 5px;">CONTACT</p>
        <hr  style="height:2px;border-width:0;color:goldenrod;background-color:goldenrod">
 
 
-        <div class="mobile" style="background-color: goldenrod;">
-                <p class="text-center">Mobile</p>
+        <div class="mobile" >
+
+                <p class="text-center small">Mobile
+                </p>
         </div>
         <p class="text-center small">0546109319 | Ghanaian</p>
 
-        <div class="mobile" style="background-color: goldenrod;">
-           <span style="background-color: black;" ><p class="text-center">Email</p></span>
+        <div class="mobile">
+         <p class="text-center small">Email</p>
     </div>            
-    <p class="text-center small mt-0">chudah.yakung@ashesi.edu.gh</p>
+    <p class="text-center small">chudah.yakung@ashesi.edu.gh</p>
           
-        <div style="background-color: goldenrod;">
-            <p class="text-center">LinkedIn</p>
+        <div >
+            <p class="text-center small" >LinkedIn</p>
             </div>
-            <p><a class="text-center small" href="www.linkedin.com/in/chudah-yakung">www.linkedin.com/in/chudah-yakung</a></p>
-        <div style="background-color: goldenrod;">
-           <p class="text-center" >Github</p>
+            <p class="text-center small"><a class="text-center small" href="linkedin.com/in/chudah-yakung">www.linkedin.com/in/chudah-yakung</a></p>
+        <div >
+           <p class="text-center small" >Github</p>
         </div>
         <p><a class="text-center small" href="https://github.com/chudah1">https://github.com/chudah1</a></p>
-        </div>
         </div>
     </div>
     </div>
@@ -163,7 +164,7 @@
                        <b> <p>Ashesi Univeristy, Computer Science Department</p></b>
                         <p>Programming Tutor</p>
                         <ul>
-                        <li>Taught students concepts in web development weekly enabling them to build a website by themselvesTutored 50 freshmen fundamental concepts in Python programming enabling them to move beyond beginner level to
+            <li>Tutored 50 freshmen fundamental concepts in Python programming enabling them to move beyond beginner level to
                             intermediate level</li>
                         </ul>
                     </div>
